End Category&Prodcut Section

--- a/Ecom.Api/Ecom.Api.csproj
+++ b/Ecom.Api/Ecom.Api.csproj
@@ -7,15 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Controllers\CategoriesController.cs~RF211e97c6.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
