End-Accounts-Section

--- a/Ecom.Api/appsettings.Development.json
+++ b/Ecom.Api/appsettings.Development.json
@@ -5,7 +5,24 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "ConnectionStrings": {
-    "Default": "Server=. ; Database=FirstEcom; User ID=sa ; Password=sa123456; TrustServerCertificate=true;"
+    "Default": "Server=.; Database=FirstEcom; User ID=sa ; Password=sa123456; TrustServerCertificate=true;",
+    "redis": "localhost"
+  },
+
+  "EmailSetting": {
+
+    "Port": "465",
+    "From":     "mohamedsabertamer1@gmail.com",
+    "UserName": "mohamedsabertamer1@gmail.com",
+    "Password": "mxbgjcfkqjqleiql",
+    "smtp": "smtp.gmail.com"
+
+  },
+  "Token": {
+    "Secret": "s4P!@#zK9qLmTg7vFhX2rBdC$eYwNvMa",
+    "Issuer": "https://localhost:7076/"
+
   }
 }
